build_error_utf8.log
g++ : src/physics/PhysicsEngine.cpp: In member 
function 'void PhysicsEngine::step(float, 
std::vector<TransformComponent>&, const 
std::vector<AtomComponent>&, 
std::vector<StateComponent>&, int)':
En línea: 1 Carácter: 1
+ g++ src/main.cpp 
src/core/LocalizationManager.cpp 
src/core/JsonLoader ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (sr 
   c/physics/Phy...onent>&, int)'::String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
src/physics/PhysicsEngine.cpp:234:53: error: 
binding reference of type 
'std::vector<AtomComponent>&' to 'const 
std::vector<AtomComponent>' discards qualifiers
  234 |     
BondingSystem::updateSpontaneousBonding(states, 
atoms, transforms, grid, rootCache, 
&environment, tractedEntityId);
      |                                         
            ^~~~~
In file included from 
src/physics/PhysicsEngine.cpp:2:
src/physics/BondingSystem.hpp:48:70: note: 
initializing argument 2 of 'static void BondingS
ystem::updateSpontaneousBonding(std::vector<Stat
eComponent>&, std::vector<AtomComponent>&, 
std::vector<TransformComponent>&, const 
SpatialGrid&, const std::vector<int>&, 
EnvironmentManager*, int)'
   48 |                                         
 std::vector<AtomComponent>& atoms,
      |                                         
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
